Added search functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>KINGshop</title>
+    <script>
+      const fill = (val) => {
+        document.getElementsByClassName("mr-sm-2")[0].value = val
+    document.getElementById("display").innerHTML = ""
+  }
+    </script>
   </head>
   <body>
     <div id="root"></div>
